{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 102,
  "lineage": "de23c180-910e-07b0-dbc4-91bf27ca0df0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "application_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237868187491:vpc/vpc-0106218dbddd3a753",
            "cidr_block": "10.52.8.0/22",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04933ff11374f7ee3",
                "cidr_block": "10.52.8.0/22",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-0b6254adf6e668d65",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0030bd222b1072210",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0106218dbddd3a753",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a4f2759f58889bfe",
            "owner_id": "237868187491",
            "tags": {
              "Name": "Unity-Dev-VPC",
              "Project": "MCP"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:237868187491:loadbalancer/app/mdps-artifact-catalog-alb/598bf79c57d0c659",
            "arn_suffix": "app/mdps-artifact-catalog-alb/598bf79c57d0c659",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mdps-artifact-catalog-alb-1981962667.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:237868187491:loadbalancer/app/mdps-artifact-catalog-alb/598bf79c57d0c659",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mdps-artifact-catalog-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a9100a763054fdcc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-009c32904a8bf3b92"
              },
              {
                "subnet_id": "subnet-059bc4f467275b59d"
              },
              {
                "subnet_id": "subnet-087b54673c7549e2d"
              },
              {
                "subnet_id": "subnet-0ebdd997cc3ebe58d"
              }
            ],
            "subnets": [
              "subnet-009c32904a8bf3b92",
              "subnet-059bc4f467275b59d",
              "subnet-087b54673c7549e2d",
              "subnet-0ebdd997cc3ebe58d"
            ],
            "tags": {
              "Environment": "sit",
              "Project": "mdps-artifact-catalog"
            },
            "tags_all": {
              "Environment": "sit",
              "Project": "mdps-artifact-catalog"
            },
            "vpc_id": "vpc-0106218dbddd3a753",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:237868187491:listener/app/mdps-artifact-catalog-alb/598bf79c57d0c659/c61f8ae46e9c0f40",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:237868187491:targetgroup/mdps-artifact-catalog-tg/4298de1640978bc5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:237868187491:listener/app/mdps-artifact-catalog-alb/598bf79c57d0c659/c61f8ae46e9c0f40",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:237868187491:loadbalancer/app/mdps-artifact-catalog-alb/598bf79c57d0c659",
            "mutual_authentication": [],
            "port": 8343,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:237868187491:targetgroup/mdps-artifact-catalog-tg/4298de1640978bc5",
            "arn_suffix": "targetgroup/mdps-artifact-catalog-tg/4298de1640978bc5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:237868187491:targetgroup/mdps-artifact-catalog-tg/4298de1640978bc5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mdps-artifact-catalog-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0106218dbddd3a753"
          },
          "dependencies": [
            "data.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237868187491:security-group/sg-0a9100a763054fdcc",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9100a763054fdcc",
            "ingress": [
              {
                "cidr_blocks": [
                  "128.149.0.0/16",
                  "137.78.0.0/16",
                  "137.79.0.0/16"
                ],
                "description": "",
                "from_port": 8343,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8343
              }
            ],
            "name": "mdps-artifact-catalog-alb-sg",
            "name_prefix": "",
            "owner_id": "237868187491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sit",
              "Project": "mdps-artifact-catalog"
            },
            "tags_all": {
              "Environment": "sit",
              "Project": "mdps-artifact-catalog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0106218dbddd3a753"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237868187491:security-group/sg-004693874efd507f1",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004693874efd507f1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a9100a763054fdcc"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "mdps-artifact-catalog-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "237868187491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sit",
              "Project": "mdps-artifact-catalog"
            },
            "tags_all": {
              "Environment": "sit",
              "Project": "mdps-artifact-catalog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0106218dbddd3a753"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:237868187491:security-group/sg-0461cdcc2bca2b3b9",
            "description": "Security group for RDS",
            "egress": [],
            "id": "sg-0461cdcc2bca2b3b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004693874efd507f1"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mdps-artifact-catalog-rds-sg",
            "name_prefix": "",
            "owner_id": "237868187491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sit",
              "Project": "mdps-artifact-catalog"
            },
            "tags_all": {
              "Environment": "sit",
              "Project": "mdps-artifact-catalog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0106218dbddd3a753"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "data.aws_vpc.application_vpc"
          ]
        }
      ]
    }
  ]
}